# trython

./: README.md  pyproject.toml
basics/: classes.py  controls.py  euler.py
basics/cl/: cl1.py
clock/: main.py
cpp-python/: CMakeLists.txt  main.cpp
flask/: basic_flask.py
goat/: main.py
jupyter/: myNotebook.ipynb  notes.txt
markov/: mrp.py
numpyarr/: eigen_svd.py  np.py
problems/: HowToProoveIt.ipynb
problems/2-egg/: benchmark.py  egg_game.py  main.py  method_bruteforce.py  methods.py  test_egg_game.py
python-cpp/: CMakeLists.txt  call-cpp.py  library.cpp  library.h
rocket/: rocketsim.ipynb
scipy/: optitrier.py  pyproject.toml
sharelocation/: read_location.py
superpoint/: main.py
threading/: interProcessComm.py
torch/: fcMnist.py  fcNetwork.py  mnist.py  tensor.py
torch/name_rnn/: data.py  model.py  predict.py  train.py
torricelli/: pipe_simulation.py
wheeel/: wheel.ipynb
