[tool.poetry]
name = "scipytests"
version = "0.1.0"
description = ""
authors = ["Adrian Schneider <adrian.schneider.pr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.23.1"
matplotlib = "^3.5.3"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
